--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
             <br>
               <div class="social-container">
                 <a href="https://mail.google.com/mail/?view=cm&fs=1&tf=1&to=dlarrea259@gmail.com" class="social-link" target="_blank"><i class='banneri bx bxl-gmail'></i></a>
-                <a href="https://github.com/DavidL2008" class="social-link"><i class='banneri bx bxl-github'></i></a>
-                <a href="#" class="social-link"><i class='banneri bx bxl-instagram'></i></a>
-                <a href="#" class="social-link"><i class='banneri bx bxl-twitter' style='color:#ffffff'></i></a>
+                <a href="https://github.com/DavidL2008" class="social-link" target="_blank"><i class='banneri bx bxl-github'></i></a>
+                <a href="https://www.instagram.com/dlarrea259/" class="social-link" target="_blank"><i class='banneri bx bxl-instagram'></i></a>
+                <a href="https://twitter.com/DavidLa57326840" class="social-link" target="_blank"><i class='banneri bx bxl-twitter' style='color:#ffffff'></i></a>
                 <a href="#" class="social-link"><i class='banneri bx bxl-whatsapp'></i></a>
               </div>
         </div>
@@ -62,7 +62,7 @@
                 <br>Soy tecnico en Ingieneria de Sotfware con conocimientos y habalidades de programacion, diseño de software y desarrollo Web con deseo de aprender mas sobre este mundo de las nuevas tecnologias
                 <br>
             </p>
-            <a href="#" class="btn2">Read more</a>
+            <a href="pdf/David Torres Larrea.pdf" class="btn2" target="_blank">Read more</a>
         </div>
         <div class="imgbanner">
             <img src="image/guy.jpg" alt="" class="">
@@ -82,6 +82,7 @@
                 <a href="#" class="skills_name"><img src="image/icon/icons8-html.svg" alt="html" /></a>
                 <a href="#" class="skills_name"><img src="image/icon/icons8-css.svg" alt="css" /></a>
                 <a href="#" class="skills_name"><img src="image/icon/icons8-js.svg" alt="javascript" /></a>
+                <a href="#" class="skills_name"><img src="image/icon/icons8-python.svg" alt="python" /></a>
               </div>
               <br>
               <br>
@@ -100,7 +101,7 @@
                 <div data-aos="fade-down" class="skills_data">
                     <!-- <h3 class="skills-titulo">Language</h3> -->
                     <div class="skills_iconos">
-                      <a href="#" class="skills_name"><img src="image/icon/icons8-python.svg" alt="python" /></a>
+                      <a href="#" class="skills_name"><img src="image/icon/icons8-git.svg" alt="git" /></a>
                       <a href="#" class="skills_name"><img src="image/icon/icons8-logotipo-de-java-coffee-cup.svg" alt="java" /></a>
                       <a href="#" class="skills_name"><img src="image/icon/icons8-microsoft-sql-server.svg" alt="sqlserver" /></a>
                       <a href="#" class="skills_name"><img src="image/icon/icons8-github.svg" alt="github" /></a>
@@ -118,13 +119,13 @@
 
         <div class="proyectos_container h-grid">
           <div data-aos="fade-down" class="proyectos_links">
-            <a href="https://github.com/DavidL2008" target="_blank">
-              <img src="" alt=""/>
+            <a href="https://github.com/DavidL2008/My-Portafolio" target="_blank">
+              <img src="image/P2.png" alt=""/>
             </a>
-            <h4 class="titulo_proyecto">Proyecto 1</h4>
+            <h4 class="titulo_proyecto">Portafolio con HTML y CSS</h4>
 
             <div class="proyecto_link-item">
-              <a href="https://github.com/DavidL2008" class="proyecto_item" target="_blank">
+              <a href="https://github.com/DavidL2008/My-Portafolio" class="proyecto_item" target="_blank">
                 <i class="bx bxl-github"></i>
               </a>
               <a href="" class="proyecto_item" target="_blank">
@@ -134,13 +135,13 @@
           </div>
 
           <div data-aos="fade-down" class="proyectos_links">
-            <a href="https://github.com/DavidL2008" target="_blank">
-              <img src="" alt=""/>
+            <a href="https://github.com/DavidL2008/php-login" target="_blank">
+              <img src="image/p1.png" alt=""/>
             </a>
-            <h4 class="titulo_proyecto">Proyecto 1</h4>
+            <h4 class="titulo_proyecto">Login con PHP</h4>
 
             <div class="proyecto_link-item">
-              <a href="https://github.com/DavidL2008" class="proyecto_item" target="_blank">
+              <a href="https://github.com/DavidL2008/php-login" class="proyecto_item" target="_blank">
                 <i class="bx bxl-github"></i>
               </a>
               <a href="" class="proyecto_item" target="_blank">
@@ -222,10 +223,10 @@
                       <a href="https://github.com/DavidL2008" class="social-link" target="_blank">
                         <i class='bx bxl-github' ></i>
                       </a>
-                      <a href="" class="social-link">
+                      <a href="https://www.instagram.com/dlarrea259/" class="social-link">
                         <i class='bx bxl-instagram'></i>
                       </a>
-                      <a href="" class="social-link">
+                      <a href="https://twitter.com/DavidLa57326840" class="social-link">
                         <i class='bx bxl-twitter' style='color:#ffffff'  ></i>
                       </a>
                       <a href="" class="social-link">
