--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <a href="https://github.com/DavidL2008" class="social-link" target="_blank"><i class='banneri bx bxl-github'></i></a>
                 <a href="https://www.instagram.com/dlarrea259/" class="social-link" target="_blank"><i class='banneri bx bxl-instagram'></i></a>
                 <a href="https://twitter.com/DavidLa57326840" class="social-link" target="_blank"><i class='banneri bx bxl-twitter' style='color:#ffffff'></i></a>
-                <a href="#" class="social-link"><i class='banneri bx bxl-whatsapp'></i></a>
+                <a href="https://wa.link/g63q92" class="social-link"><i class='banneri bx bxl-whatsapp'></i></a>
               </div>
         </div>
           
@@ -62,7 +62,29 @@
                 <br>Soy tecnico en Ingieneria de Sotfware con conocimientos y habalidades de programacion, diseño de software y desarrollo Web con deseo de aprender mas sobre este mundo de las nuevas tecnologias
                 <br>
             </p>
-            <a href="pdf/David Torres Larrea.pdf" class="btn2" target="_blank">Read more</a>
+            <p class="descripcion">
+              <strong>Intereses:</strong>
+              <br>- Cine
+              <br>- Musica
+              <br>- Creacion de contenido
+              <br>- Fotografia
+            </p>
+            <p class="descripcion">
+              <strong>Idiomas:</strong>
+              <br>- Español
+              <br>- Ingles
+            </p>
+            <p class="descripcion">
+              <strong>Estudios:</strong>
+              <br><strong>- Senati</strong>
+              <br><strong>- Icpna</strong>
+              <br>- I.E 10052
+              <br>- I.E Diego Ferre Reque
+              <!-- <br>
+              <br><strong>- Senati</strong>
+              <br><strong>- Icpna</strong> -->
+            </p>
+            <a href="pdf/David Torres Larrea.pdf" class="btn2" target="_blank">Curriculum vitae</a>
         </div>
         <div class="imgbanner">
             <img src="image/guy.jpg" alt="" class="">
@@ -115,7 +137,7 @@
 
 
       <section class="proyectos section" id="projects">
-        <h2 class="section-title">Projects</h2>
+        <h2 class="section-title">Proyectos</h2>
 
         <div class="proyectos_container h-grid">
           <div data-aos="fade-down" class="proyectos_links">
@@ -128,7 +150,7 @@
               <a href="https://github.com/DavidL2008/My-Portafolio" class="proyecto_item" target="_blank">
                 <i class="bx bxl-github"></i>
               </a>
-              <a href="" class="proyecto_item" target="_blank">
+              <a href="https://davidl2008.github.io/My-Portafolio/" class="proyecto_item" target="_blank">
                 <i class="bx bx-globe"></i>
               </a>
             </div>
@@ -144,9 +166,9 @@
               <a href="https://github.com/DavidL2008/php-login" class="proyecto_item" target="_blank">
                 <i class="bx bxl-github"></i>
               </a>
-              <a href="" class="proyecto_item" target="_blank">
+              <!-- <a href="" class="proyecto_item" target="_blank">
                 <i class="bx bx-globe"></i>
-              </a>
+              </a> -->
             </div>
           </div>
 
@@ -185,7 +207,7 @@
               ><i class="bx bxl-gmail"></i
             ></a>
             <a
-              href=""
+              href="https://wa.link/g63q92"
               target="_blank"
               class="icon-contact"
               ><i class="bx bxl-whatsapp" ></i
@@ -229,7 +251,7 @@
                       <a href="https://twitter.com/DavidLa57326840" class="social-link">
                         <i class='bx bxl-twitter' style='color:#ffffff'  ></i>
                       </a>
-                      <a href="" class="social-link">
+                      <a href="https://wa.link/g63q92" class="social-link">
                         <i class='bx bxl-whatsapp'></i>
                       </a>
                   </div>
