--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
                 <li><a href="#skills">Skills</a></li>
                 <li><a href="#projects">Portafolio</a></li>
                 <li><a href="#cuatro">Contactame</a></li>
+                <li><a href="#cuatro">servicios</a></li>
             </ul>
         </nav>
     </header>
